# cot-icl-lab

./: .gitignore  LICENSE  README.md  beautify.sh  pyproject.toml  setup.py
docs/: README.md  index.html  sitemap.xml
docs/css/: distill.css  widgets.css
docs/js/: dag.js  main.js  recipe.js  rng.js  symbolic.js  token-processor.js
docs/js/widgets/: construct-abstract.js  construct-symbolic.js  dag-visualizer.js  hero-animation.js  hybrid-prompt.js  recipe-scheduler.js
src/: requirements.txt
src/tokenized_cot_icl/core/: args.py  dag.py  data.py  metric_loggers.py  models.py  task_card.py  token_processor.py  train.py  utils.py
src/tokenized_cot_icl/core/data/: dag.py  data.py  recipes.py  token_processor.py
src/tokenized_cot_icl/core/data/symbolic/: common.py  prepare.py  symbolic_data_module.py
src/tokenized_cot_icl/core/prompts/: base.py  cot.py  registry.py  standard.py
src/tokenized_cot_icl/core/prompts/strategies/: base.py  cot.py  cot_special_token.py  hybrid_special_token.py  registry.py  standard.py  standard_special_token.py
src/tokenized_cot_icl/core/prompts/transformations/: drop_cot_tokens.py  offset_tokens.py  registry.py  utils.py
src/tokenized_cot_icl/inference/: README.md  base_evaluator.py  eval.py  evaluate.py  task_card.py
src/tokenized_cot_icl/inference/base/: base_evaluator.py
src/tokenized_cot_icl/inference/sglang/: evaluator.py
src/tokenized_cot_icl/inference/vllm/: eval.py  evaluator.py  evaluator_special_token.py
test/: test_dag.py  test_prompts.py
tests/: test_args.py  test_dag.py  test_datasets.py  test_prompt_strategies.py  test_prompt_transformation.py  test_prompts.py  test_recipes.py  test_symbolic_prepare.py  test_task_card.py  test_token_processor.py  test_utils.py
